# io4edge-client-c

./: .clang-format  .clangd  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.cache/clangd/index/: example1.c.D71E3DCC979D372E.idx  functionblock.c.59D0B4123A7D47EA.idx  io4edge_client.h.319934F4593E02A8.idx  io4edge_internal.h.C7FD3ED58057F382.idx  lib.c.4A0B2B8E4B8DB971.idx  logging.c.781DFC25B3759CD8.idx  logging.h.0CD83000E0B2A608.idx  socket_transport.c.D86EC1396D42025E.idx  test1.cc.CC7A9CB047F5B3A2.idx
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: buildtest.yaml
dev/: build.sh
examples/: CMakeLists.txt  example1  example1.c  test1.c
examples/analogintypea/: README.md  main.c
examples/binaryiotypea/: README.md  main.c
examples/canl2/: README.md  can_example.h  config.c  dumpstream.c  send.c
examples/mvbsniffer/: README.md  main.c  reconnect.c
scripts/: rename.sh
src/: CMakeLists.txt  analogintypea.c  binaryiotypea.c  canl2.c  functionblock.c  io4edge_internal.h  lib.c  logging.c  logging.h  mvbsniffer.c  socket_transport.c  streamq.c
src/include/: binaryiotypea.h  io4edge_analogintypea.h  io4edge_binaryiotypea.h  io4edge_canl2.h  io4edge_client.h  io4edge_mvbsniffer.h
src/unix/: logging.c  socket_transport.c
tests/: CMakeLists.txt  test1.cc  test_streamq.cc
